--- a/notificaciones-service/src/main/resources/application.properties
+++ b/notificaciones-service/src/main/resources/application.properties
@@ -1,17 +1,38 @@
 spring.application.name=notificaciones-service
 
-# Dirección del broker
+# Kafka
 spring.kafka.bootstrap-servers=localhost:9092
 
-# Producer: serializadores de clave y valor (JSON)
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+# Consumer: ErrorHandlingDeserializer que delega en StringDeserializer para el value
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 
-# Consumer: deserializadores y configuración de grupo
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.group-id=${spring.application.name}
+spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
+
+spring.kafka.consumer.group-id=notificaciones-service
 spring.kafka.consumer.auto-offset-reset=earliest
 
-# Paquetes de clases de los eventos de confianza para el JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.gymfex.common.events
+# NO usar trusted.packages ni type headers (estamos consumiendo JSON plano)
+# spring.kafka.consumer.properties.spring.json.trusted.packages=...  <-- QUITAR
+# spring.kafka.consumer.properties.spring.json.use.type.headers=true <-- QUITAR
+# spring.kafka.consumer.properties.spring.json.trusted.type.headers=* <-- QUITAR
+
+# Mail (tu configuración)
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=da9aa40f00023f
+spring.mail.password=e62aa78a35a17e
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Logging
+logging.level.org.springframework.kafka=INFO
+
+# H2 (opcional)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
