--- a/notificaciones-service/pom.xml
+++ b/notificaciones-service/pom.xml
@@ -96,8 +96,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
-
-
+		<dependency>
+			<groupId>com.gymfex</groupId>
+			<artifactId>common</artifactId>   <!-- <- coincide con el pom del módulo -->
+			<version>1.0.0</version>
+		</dependency>
 
 
 	</dependencies>
