--- a/notificaciones-service/src/main/resources/application.properties
+++ b/notificaciones-service/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=notificaciones-service
 
 # Kafka
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
+
 
 # Consumer: ErrorHandlingDeserializer que delega en StringDeserializer para el value
 spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
