--- a/usuarios-service/src/main/resources/application.properties
+++ b/usuarios-service/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=usuarios_service
 
 # PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/gymfex
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/usuariosdb
+spring.datasource.username=gymfex
+spring.datasource.password=gymfex
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -15,7 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 mapstruct.verbose=true
 
 # Kafka
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:kafka:9092}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
