--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,8 +73,21 @@ services:
     ports:
       - "8082:8080"
 
+  sonarqube:
+    image: sonarqube:lts-community
+    container_name: sonarqube
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
+
 volumes:
   zk_data:
   zk_log:
   kafka_data:
   postgres_data:
+  sonarqube_data:
+  sonarqube_extensions:
