--- a/gymfex-common-events/pom.xml
+++ b/gymfex-common-events/pom.xml
@@ -14,7 +14,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Jackson (si necesitas usar ObjectMapper en common) -->
+    <!-- Jackson -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
